<resources>
    <string name="app_name">joystick</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Flight Gear Joystick</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="connect">Connect</string>
    <string name="enter">Enter</string>
    <string name="enterIP">Enter IP Address…</string>
    <string name="enterPort">Enter Port…</string>
    <string name="logo">Logo</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="insert_ip">IP Address…</string>
    <string name="insert_port">Port…</string>
    <string name="MyIP">192.168.5.129</string>
    <string name="MyPort">6400</string>
    <string name="FlightGearJoystick">FlightGear Remote Controller</string>
    <string name="engine_start">Engine Start Button</string>
    <string name="turbo_button">Turbo Button</string>
</resources>