<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="730dp"
    tools:context=".views.MainActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:elevation="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:title="@string/FlightGearJoystick"

        android:titleMarginStart="75dp"
        android:titleMarginEnd="50dp"
        android:titleTextColor="#ffffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <GridLayout
        android:id="@+id/GridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:context=".GridXMLActivity">

        <EditText
            android:id="@+id/ip"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginHorizontal="@android:dimen/app_icon_size"
            android:hint="@string/insert_ip"
            android:inputType="textPersonName"
            android:text="@string/MyIP"
            android:textAlignment="center"
            android:layout_marginTop="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />


        <EditText
            android:id="@+id/port"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@android:dimen/app_icon_size"
            android:autofillHints="Enter IP"
            android:gravity="center_horizontal"
            android:hint="@string/insert_port"
            android:text="@string/MyPort"
            android:textAlignment="center"
            android:layout_marginTop="1dp"
            app:layout_constraintStart_toEndOf="@+id/ip"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <Button
            android:id="@+id/connect_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/connect"
            android:textColor="#ffffff"
            android:textSize="16sp"

            app:layout_constraintEnd_toEndOf="@id/resetButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/port"

            />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:backgroundTint="@color/colorPrimary"
            android:layout_gravity="center"
            android:text="   RESET   "
            android:textColor="#ffffff"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="@id/connect_btn"
            app:layout_constraintTop_toBottomOf="@+id/port" />

    </GridLayout>


    <SeekBar
        android:id="@+id/throttleBar"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="60dp"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/seekbar_style"
        android:rotation="270"
        android:splitTrack="false"
        android:thumb="@drawable/custom_thumb"

        app:layout_constraintEnd_toStartOf="@id/turbo_button"
        app:layout_constraintTop_toBottomOf="@+id/engine_start"
        tools:ignore="MissingConstraints" />


    <SeekBar
        android:id="@+id/rudderBar"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:max="100"
        android:progress="50"
        android:progressDrawable="@drawable/seekbar_style"
        android:splitTrack="false"
        android:thumb="@drawable/custom_thumb"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/throttleBar"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/JoystickLayout"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="40dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/engine_start"
        tools:ignore="MissingConstraints"
        >

        <com.example.androidapp.views.JoystickView
            android:layout_width="298dp"
            android:layout_height="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/engine_start"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/engine_start_imgbtn_bg"
        app:layout_constraintEnd_toStartOf="@id/turbo_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GridLayout1" />

    <ImageButton
        android:id="@+id/turbo_button"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="47dp"
        android:background="@drawable/turbo_imgbtn_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/engine_start"
        app:layout_constraintTop_toBottomOf="@id/GridLayout1" />

</androidx.constraintlayout.widget.ConstraintLayout>